--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Tenzies React App</title>
+		<script type="module" crossorigin src="/tenzies/assets/index.e0a0ec76.js"></script>
+		<link rel="stylesheet" href="/tenzies/assets/index.6926d62c.css">
 	</head>
 	<body>
 		<div id="root"></div>
-		<script type="module" src="/src/main.jsx"></script>
+		
 	</body>
 </html>
